# pipebook

./: README.md  pyproject.toml
.github/workflows/: setup_poetry.yml
pipebook/: app.py  data.py  doc.py  frame_viewer.py  io.py  view.py
tests/: conftest.py  test_pipe.py  test_pipebook.py
