[tool.poetry]
name = "pipebook"
version = "0.1.0"
description = ""
authors = ["Ernest Prabhakar <ernest.prabhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fridaay = "^0.1.0"
toga = "0.3.0.dev34"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
